--- a/index.html
+++ b/index.html
@@ -12,50 +12,56 @@
   </head>
   <body>
     <header></header>
-    <!-- ! Cercle clignotant live -->
-    <!-- <div class="extern-circle">
+    <div class="main-container">
+      <section class="section-1">
+        <div class="primary-story"></div>
+        <div class="secondary-story"></div>
+      </section>
+      <!-- ! Cercle clignotant live -->
+      <!-- <div class="extern-circle">
       <div class="intern-circle">
       </div>
     </div> -->
-    <div class="card">
-      <div class="image-container">
-        <img class="card-image" src="/card-image.jpg" alt="superbowl" />
-        <div class="card-text-section">
-          <h3 class="card-title">
-            Chiefs beat 49ers in overtime to defend Super Bowl title
-          </h3>
-          <p class="card-text">
-            The Kansas City Chiefs fight back to beat the San Francisco 49ers
-            25-22 in overtime and win their third Super Bowl in five years.
-          </p>
-          <ul class="card-footer">
-            <svg class="clock" viewBox="0 0 32 32" focusable="false">
-              <polygon
-                points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"
-              ></polygon>
-              <path
-                d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z"
-              ></path>
-            </svg>
-            <li class="card-footer-item pipe">1h</li>
-
-            <li class="card-footer-item pipe">BBC Sport</li>
-            <li class="card-footer-item">
-              <svg
-                class="dialogue-icon"
-                aria-hidden="true"
-                viewBox="0 0 32 32"
-                focusable="false"
-              >
+      <div class="card">
+        <div class="image-container">
+          <img class="card-image" src="/card-image.jpg" alt="superbowl" />
+          <div class="card-text-section">
+            <h3 class="card-title">
+              Chiefs beat 49ers in overtime to defend Super Bowl title
+            </h3>
+            <p class="card-text">
+              The Kansas City Chiefs fight back to beat the San Francisco 49ers
+              25-22 in overtime and win their third Super Bowl in five years.
+            </p>
+            <ul class="card-footer">
+              <svg class="clock" viewBox="0 0 32 32" focusable="false">
+                <polygon
+                  points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"
+                ></polygon>
                 <path
-                  d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"
+                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z"
                 ></path>
               </svg>
-            </li>
-          </ul>
+              <li class="card-footer-item pipe">1h</li>
+
+              <li class="card-footer-item pipe">BBC Sport</li>
+              <li class="card-footer-item">
+                <svg
+                  class="dialogue-icon"
+                  aria-hidden="true"
+                  viewBox="0 0 32 32"
+                  focusable="false"
+                >
+                  <path
+                    d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"
+                  ></path>
+                </svg>
+              </li>
+            </ul>
+          </div>
         </div>
+        <!-- <img class="card-image" src="/card-image.jpg" alt="superbowl" /> -->
       </div>
-      <!-- <img class="card-image" src="/card-image.jpg" alt="superbowl" /> -->
     </div>
     <footer></footer>
   </body>
