--- a/index.html
+++ b/index.html
@@ -1,68 +1,360 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
-    <link
-      href="https://db.onlinewebfonts.com/c/a1d0120b37754be8e80e39ab6ab95130?family=BBC+Reith+Sans"
-      rel="stylesheet"
-    />
-    <title>Document</title>
-  </head>
-  <body>
-    <header></header>
-    <div class="main-container">
-      <section class="section-1">
-        <div class="primary-story"></div>
-        <div class="secondary-story"></div>
-      </section>
-      <!-- ! Cercle clignotant live -->
-      <!-- <div class="extern-circle">
-      <div class="intern-circle">
-      </div>
-    </div> -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="style.css" rel="stylesheet" />
+  <link href="https://db.onlinewebfonts.com/c/a1d0120b37754be8e80e39ab6ab95130?family=BBC+Reith+Sans"
+    rel="stylesheet" />
+  <title>Document</title>
+</head>
+
+<body>
+  <header></header>
+  <div class="main-container">
+    <section class="section-1">
+      <div class="primary-story"></div>
+      <div class="secondary-story"></div>
+    </section>
+
+
+    <!-- ! Flex container -->
+    <div class="flex-container">
+
       <div class="card">
         <div class="image-container">
-          <img class="card-image" src="/card-image.jpg" alt="superbowl" />
+          <img class="card-image" src="img/Bowen.JPG" alt="Bowen" />
           <div class="card-text-section">
             <h3 class="card-title">
-              Chiefs beat 49ers in overtime to defend Super Bowl title
+              Why is Rafah the new focus in Gaza war ?
             </h3>
             <p class="card-text">
-              The Kansas City Chiefs fight back to beat the San Francisco 49ers
-              25-22 in overtime and win their third Super Bowl in five years.
+              International editor Jeremy Bowen analyses Israel's decision to expand military operations south into
+              Rafah.
+              <br>
             </p>
             <ul class="card-footer">
               <svg class="clock" viewBox="0 0 32 32" focusable="false">
-                <polygon
-                  points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"
-                ></polygon>
+                <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
                 <path
-                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z"
-                ></path>
+                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+                </path>
               </svg>
               <li class="card-footer-item pipe">1h</li>
 
               <li class="card-footer-item pipe">BBC Sport</li>
               <li class="card-footer-item">
-                <svg
-                  class="dialogue-icon"
-                  aria-hidden="true"
-                  viewBox="0 0 32 32"
-                  focusable="false"
-                >
-                  <path
-                    d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"
-                  ></path>
+                <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+                  <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
                 </svg>
               </li>
             </ul>
           </div>
         </div>
-        <!-- <img class="card-image" src="/card-image.jpg" alt="superbowl" /> -->
+      </div>
+
+
+
+      <!-- ! Carte marathon -->
+      <div class="card">
+        <div class="image-container">
+          <img class="card-image" src="img/marathon_record.JPG" alt="marathon" />
+          <div class="card-text-section">
+            <h3 class="card-title">
+              Martahon record holder Kiptum dies in car accident
+            </h3>
+            <p class="card-text">
+              The 24-year-old Kenyan athlete had the potential to be one of the greatest runners over 42 km.
+            </p>
+            <br>
+            <ul class="card-footer">
+              <svg class="clock" viewBox="0 0 32 32" focusable="false">
+                <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+                <path
+                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+                </path>
+              </svg>
+              <li class="card-footer-item pipe">2h</li>
+
+              <li class="card-footer-item pipe">Africa</li>
+              <li class="card-footer-item">
+                <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+                  <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- ! Carte Israel rescues two hostages -->
+      <div class="card">
+        <div class="image-container">
+          <img class="card-image" src="img/israel_rescues_two_hostages.webp" alt="israel_rescues_two_hostages" />
+          <div class="card-text-section">
+            <h3 class="card-title">
+              Israel rescues two hostages in Rafah amid deadly strikes
+            </h3>
+            <p class="card-text">
+              The two men, Israeli-Argentinians, were rescued as Israel carried out air strikes on the southern Gazan
+              city.
+            </p>
+            <ul class="card-footer">
+              <svg class="clock" viewBox="0 0 32 32" focusable="false">
+                <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+                <path
+                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+                </path>
+              </svg>
+              <li class="card-footer-item pipe">1h</li>
+
+              <li class="card-footer-item pipe">Middle East</li>
+              <li class="card-footer-item">
+                <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+                  <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- ! Carte Man sentenced to death for Iranian director's murder -->
+      <div class="card">
+        <div class="image-container">
+          <img class="card-image" src="img/dariush_mehrjui_and_vahideh.jpg.webp" alt="dariush_mehrjui_and_vahideh" />
+          <div class="card-text-section">
+            <h3 class="card-title">
+              Man sentenced to death for Iranian director's murder
+            </h3>
+            <p class="card-text">
+              Dariush Mehjuri and his wife, Vahideh Mohammadifar, were stabbed to death in their home in October.
+            </p>
+            <ul class="card-footer">
+              <svg class="clock" viewBox="0 0 32 32" focusable="false">
+                <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+                <path
+                  d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+                </path>
+              </svg>
+              <li class="card-footer-item pipe">1h</li>
+
+              <li class="card-footer-item pipe">Middle Est</li>
+              <li class="card-footer-item">
+                <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+                  <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+                </svg>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    </div> <!-- ! flex container-->
+
+
+
+
+    <!-- ! flex container2-->
+
+    <!-- ! Carte Death toll rises to 68 in Philippines landslide -->
+    <div class="flex-container2">
+      <div class="card">
+        <h3 class="card-title">
+          Death toll rises to 68 in Philippines landslide
+        </h3>
+        <br>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">1h</li>
+          <li class="card-footer-item pipe">Asia</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+
+  <!-- ! Carte What now in Pakistan after khan vote surprise -->
+      <div class="card">
+        <h3 class="card-title">
+          What now in Pakistan after khan vote surprise?
+        </h3>
+        <br>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">5h</li>
+          <li class="card-footer-item pipe">Asia</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+     
+     <!-- ! Carte US defence secretary tranfers duties on hospital return -->
+      <div class="card">
+        <h3 class="card-title">
+          US defence secretary tranfers duties on hospital return
+        </h3>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">8h</li>
+
+          <li class="card-footer-item pipe">US & Canada</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+
+      <!-- ! 'We feel betrayed' -why anger has engulfed Senegal -->
+      <div class="card">
+        <h3 class="card-title">
+          We feel betrayed' -why anger has engulfed Senegal
+        </h3>
+        <br>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">1h</li>
+
+          <li class="card-footer-item pipe">Middle Est</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+
+      <!-- ! 'We feel betrayed' -why anger has engulfed Senegal -->
+      <div class="card">
+        <h3 class="card-title">
+          Greece: Four dead in shooting at shipping company
+        </h3>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">25m</li>
+
+          <li class="card-footer-item pipe">Europe</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- ! Carte Watch: Kelce and Swift celebrate at Super Bowl -->
+  <div class="card">
+    <div class="image-container">
+      <img class="card-image" src="img/watch_KelceandSwift_celebrate.JPG" alt="watch_KelceandSwift_celebrate" />
+      <div class="card-text-section">
+        <h3 class="card-title">
+          Watch: Kelce and Swift celebrate at Super Bowl
+        </h3>
+        <br>
+        <p class="card-text">
+          The pop icon flew in from Japan to watch her boyfriend play in Las Vegas at the 2024 championship game.
+        </p>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">2h</li>
+
+          <li class="card-footer-item pipe">US & Canada</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
       </div>
     </div>
-    <footer></footer>
-  </body>
+  </div>
+
+
+
+
+  <div class="card">
+    <div class="image-container">
+      <img class="card-image" src="img/card-image.jpg" alt="superbowl" />
+      <div class="card-text-section">
+        <h3 class="card-title">
+          Chiefs beat 49ers in overtime to defend Super Bowl title
+        </h3>
+        <br>
+        <p class="card-text">
+          The Kansas City Chiefs fight back to beat the San Francisco 49ers
+          25-22 in overtime and win their third Super Bowl in five years.
+        </p>
+        <ul class="card-footer">
+          <svg class="clock" viewBox="0 0 32 32" focusable="false">
+            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+            <path
+              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+            </path>
+          </svg>
+          <li class="card-footer-item pipe">1h</li>
+
+          <li class="card-footer-item pipe">BBC Sport</li>
+          <li class="card-footer-item">
+            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
+            </svg>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+  </div> 
+  <footer></footer>
+
+</body>
+
 </html>
