bugfix width main et footer

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         </ul>
     </div>
 </header>
+
+<!-- ? MAIN CONTAINER -->
   <div class="main-container">
     <!-- ! Flex container -->
     <div class="flex-container">
@@ -220,7 +222,7 @@
         </ul>
       </div>
 
-  <!-- ! Carte What now in Pakistan after khan vote surprise -->
+    <!-- ! Carte What now in Pakistan after khan vote surprise -->
       <div class="card">
         <h3 class="card-title">
           What now in Pakistan after khan vote surprise?
@@ -314,75 +316,73 @@
       </div>
 
     </div>
-  </div>
+  
+<!-- ! Carte Watch: Kelce and Swift celebrate at Super Bowl -->
+<div class="card">
+  <div class="image-container">
+    <img class="card-image" src="img/watch_KelceandSwift_celebrate.JPG" alt="watch_KelceandSwift_celebrate" />
+    <div class="card-text-section">
+      <h3 class="card-title">
+        Watch: Kelce and Swift celebrate at Super Bowl
+      </h3>
+      <br>
+      <p class="card-text">
+        The pop icon flew in from Japan to watch her boyfriend play in Las Vegas at the 2024 championship game.
+      </p>
+      <ul class="card-footer">
+        <svg class="clock" viewBox="0 0 32 32" focusable="false">
+          <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+          <path
+            d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+          </path>
+        </svg>
+        <li class="card-footer-item pipe">2h</li>
 
-  <!-- ! Carte Watch: Kelce and Swift celebrate at Super Bowl -->
-  <div class="card">
-    <div class="image-container">
-      <img class="card-image" src="img/watch_KelceandSwift_celebrate.JPG" alt="watch_KelceandSwift_celebrate" />
-      <div class="card-text-section">
-        <h3 class="card-title">
-          Watch: Kelce and Swift celebrate at Super Bowl
-        </h3>
-        <br>
-        <p class="card-text">
-          The pop icon flew in from Japan to watch her boyfriend play in Las Vegas at the 2024 championship game.
-        </p>
-        <ul class="card-footer">
-          <svg class="clock" viewBox="0 0 32 32" focusable="false">
-            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
-            <path
-              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
-            </path>
+        <li class="card-footer-item pipe">US & Canada</li>
+        <li class="card-footer-item">
+          <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+            <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
           </svg>
-          <li class="card-footer-item pipe">2h</li>
-
-          <li class="card-footer-item pipe">US & Canada</li>
-          <li class="card-footer-item">
-            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
-              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
-            </svg>
-          </li>
-        </ul>
-      </div>
+        </li>
+      </ul>
     </div>
   </div>
+</div>
 
 
 
 
-  <div class="card">
-    <div class="image-container">
-      <img class="card-image" src="img/card-image.jpg" alt="superbowl" />
-      <div class="card-text-section">
-        <h3 class="card-title">
-          Chiefs beat 49ers in overtime to defend Super Bowl title
-        </h3>
-        <br>
-        <p class="card-text">
-          The Kansas City Chiefs fight back to beat the San Francisco 49ers
-          25-22 in overtime and win their third Super Bowl in five years.
-        </p>
-        <ul class="card-footer">
-          <svg class="clock" viewBox="0 0 32 32" focusable="false">
-            <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
-            <path
-              d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
-            </path>
+<div class="card">
+  <div class="image-container">
+    <img class="card-image" src="img/card-image.jpg" alt="superbowl" />
+    <div class="card-text-section">
+      <h3 class="card-title">
+        Chiefs beat 49ers in overtime to defend Super Bowl title
+      </h3>
+      <br>
+      <p class="card-text">
+        The Kansas City Chiefs fight back to beat the San Francisco 49ers
+        25-22 in overtime and win their third Super Bowl in five years.
+      </p>
+      <ul class="card-footer">
+        <svg class="clock" viewBox="0 0 32 32" focusable="false">
+          <polygon points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"></polygon>
+          <path
+            d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z">
+          </path>
+        </svg>
+        <li class="card-footer-item pipe">1h</li>
+
+        <li class="card-footer-item pipe">BBC Sport</li>
+        <li class="card-footer-item">
+          <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
+            <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
           </svg>
-          <li class="card-footer-item pipe">1h</li>
-
-          <li class="card-footer-item pipe">BBC Sport</li>
-          <li class="card-footer-item">
-            <svg class="dialogue-icon" aria-hidden="true" viewBox="0 0 32 32" focusable="false">
-              <path d="M0 0v32l8-8h24V0H0zm4 10h18v4H4v-4zm24 10H4v-4h24v4zm0-12H4V4h24v4z"></path>
-            </svg>
-          </li>
-        </ul>
-      </div>
+        </li>
+      </ul>
     </div>
   </div>
-
+</div>
 
 
 
