--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="header-bottom-main-container">
           <ul class="nav-container">
             <li class="nav-item nav-item-first">Home</li>
-            <li class="nav-item">War in Ukraine</li>
+            <li class="nav-item nav-item-start">War in Ukraine</li>
             <li class="nav-item">Climate</li>
             <li class="nav-item">Israel-Gaza war</li>
             <li class="nav-item">Video</li>
