reste modif footer + height image

--- a/index.html
+++ b/index.html
@@ -1577,7 +1577,7 @@
           <div class="policies">
             <ul>
               <li>
-                <a href="https://www.bbc.co.uk/usingthebbc/terms/"
+                <a class="testt" href="https://www.bbc.co.uk/usingthebbc/terms/"
                   >Terms of use</a
                 >
               </li>
@@ -1622,14 +1622,8 @@
             <label for="copyright">
               <em>Copyright © 2024 BBC.</em>
               The BBC is not responsible for the content of external sites.
+              <span> Read about our approach to external linking. </span>
             </label>
-            <span
-              ><a
-                href="https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links"
-              >
-                Read about our approach to external linking.
-              </a></span
-            >
           </div>
         </div>
       </div>
