--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     <div class="main-container">
       <div class="main-part">
         <div class="card card-first">
-          <div class="image-container">
-            <div class="card-text-section">
-              <h3 class="card-title-big">
+          <div class="image-container image-container-first">
+            <div class="card-text-section card-text-section-first">
+              <h3 class="card-title-big card-title-big-first">
                 US House votes to impeach homeland security chief
               </h3>
               <p class="card-text">
@@ -146,39 +146,7 @@
           </div>
         </div>
         <img class="grid-ad" src="/img/russian-ship.jpg" alt="" />
-        <div class="card">
-          <div class="image-container">
-            <img
-              class="card-image"
-              src="https://ichef.bbci.co.uk/news/240/cpsprodpb/5319/production/_132637212_gettyimages-1993686914.jpg"
-              alt="Bowen"
-            />
-            <div class="card-text-section">
-              <h3 class="card-title">
-                UN warns attack on Rafah could lead to 'slaughter'
-              </h3>
-              <p class="card-text">
-                Its aid chief says more than a million people in the Gazan city
-                are staring "death in the face".
-                <br />
-              </p>
-              <ul class="card-footer">
-                <svg class="clock" viewBox="0 0 32 32" focusable="false">
-                  <polygon
-                    points="17,15.4 17,6 15,6 15,16.6 23.8,21.7 24.8,19.9"
-                  ></polygon>
-                  <path
-                    d="M16,4c6.6,0,12,5.4,12,12c0,6.6-5.4,12-12,12S4,22.6,4,16C4,9.4,9.4,4,16,4 M16,0C7.2,0,0,7.2,0,16c0,8.8,7.2,16,16,16 s16-7.2,16-16C32,7.2,24.8,0,16,0L16,0z"
-                  ></path>
-                </svg>
-                <li class="card-footer-item pipe">3h</li>
 
-                <li class="card-footer-item">Middle East</li>
-                <li class="card-footer-item"></li>
-              </ul>
-            </div>
-          </div>
-        </div>
         <div class="card">
           <div class="image-container">
             <img
@@ -809,12 +777,15 @@
       </div>
       <div class="moment">
         <div class="title">
-          <a href="https://www.bbc.co.uk/news/topics/c2vdnvdg6xxt">
+          <a
+            class="no-align"
+            href="https://www.bbc.co.uk/news/topics/c2vdnvdg6xxt"
+          >
             <h2 class="moment-title">Israel-Gaza war</h2>
           </a>
           <div class="hline"></div>
           <a
-            class="see-all"
+            class="see-all no-align"
             href="https://www.bbc.co.uk/news/topics/c2vdnvdg6xxt"
           >
             <h2 class="moment-title">See All</h2>
@@ -1025,11 +996,11 @@
       </div>
       <div class="sport">
         <div class="title">
-          <a href="https://www.bbc.co.uk/sport">
+          <a class="no-align" href="https://www.bbc.co.uk/sport">
             <h2>Sport</h2>
           </a>
           <div class="hline"></div>
-          <a class="see-all" href="https://www.bbc.co.uk/sport">
+          <a class="see-all no-align" href="https://www.bbc.co.uk/sport">
             <h2>See All</h2>
           </a>
         </div>
